change file name

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 					<td>New Products</td>
 				</tr>
 				<tr>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\logo.png"></td>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\menu-1.png"></td>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\menu-2.png"></td>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\menu-3.png"></td>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\menu-4.png"></td>
-					<td><img src="C:\Users\User\Documents\GitHub\Web_Week3\images\menu-5.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\logo.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\menu-1.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\menu-2.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\menu-3.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\menu-4.png"></td>
+					<td><img src="C:\Users\User\Documents\GitHub\Web_week3\images\menu-5.png"></td>
 				</tr>
 			</table>	
 		</div>
@@ -32,7 +32,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus voluptatibus quia qui odio tempora veritatis deleniti laborum, eos voluptas, quidem culpa exercitationem ipsa aspernatur iusto ducimus eaque doloribus nisi.Asperiores dolore, perspiciatis porro sequi. Ex tenetur iste voluptate delectus amet consequatur suscipit excepturi, veritatis sed ipsam enim vitae accusantium quo odit ducimus saepe facere numquam quam dignissimos natus eos.</p>
 			</div>
 			<div class="img">
-				<img src="C:\Users\User\Documents\GitHub\Web_Week3\images\demo.png">
+				<img src="C:\Users\User\Documents\GitHub\Web_week3\images\demo.png">
 			</div>
 			<div class="name">
 				Assorted Couches&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$209.00 Each
@@ -43,7 +43,7 @@
 		<div class="footer">
 			<div class="music">
 				<div class="product">
-					<img src="C:\Users\User\Documents\GitHub\Web_Week3\images\product-1.png">
+					<img src="C:\Users\User\Documents\GitHub\Web_week3\images\product-1.png">
 				</div>
 				<div class="info">
 					<p class="title">Music&nbsp;&&nbsp;MP3 Players</p>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="computer">
 				<div class="product">
-					<img src="C:\Users\User\Documents\GitHub\Web_Week3\images\product-2.png">
+					<img src="C:\Users\User\Documents\GitHub\Web_week3\images\product-2.png">
 				</div>
 				<div class="info">
 					<p class="title">
@@ -63,7 +63,7 @@
 			</div>
 			<div class="toys">
 				<div class="product">
-					<img src="C:\Users\User\Documents\GitHub\Web_Week3\images\product-3.png">
+					<img src="C:\Users\User\Documents\GitHub\Web_week3\images\product-3.png">
 				</div>
 				<div class="info">
 					<p class="title">
